adding multibinding injecting view model injeciting view model provide.factory

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,10 @@ dependencies {
     // ViewModel and LiveData
     def lifecycle_version = '2.2.0-alpha03'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
+
+    //Retroft
+    
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
